traefik-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: traefik-web-ui
  namespace: kube-system
spec:
  rules:
    - host: traefik-ui.minikube
      http:
        paths:
          - path: /api
            backend:
              serviceName: traefik-web-ui
              servicePort: web
